...
        borderWidth="$0.25"
        borderColor="$textMain"
        opacity={0.5}
      />
      <YStack paddingLeft="$3">
        <Pressable
          testID="followings-pressable"
          onPress={() => {
            router.push(`/profile/${userId}/following`);
          }}>
          <H2 fontSize={16} fontWeight="500">
            {formatNumber(followingCount)}
          </H2>
...
