appId: ${APP_ID}
---
- tapOn:
    id: 'followings-pressable'

- assertVisible:
    id: 'followings-list'

- assertVisible: 'Following'

- assertVisible:
    id: 'back-pressable'

- tapOn:
    id: 'back-pressable'
